[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.2.0",
    "eventlet>=0.36.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "requests>=2.31.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sib-api-v3-sdk>=7.6.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "werkzeug>=3.1.3",
    "xgboost>=2.0.0",
]
